--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ body{
   flex-direction: column;
   gap: 1rem;
 }
+@media screen and (max-width: 510px) {
+  .form {
+    width: 100%;
+  }
+}
 .input
 {
   padding: 0.8rem 1rem;
